Some small changes to conform with new code style in Java 17